@@ -1,13 +1,15 @@
 package br.com.postech.soat.product.adapters.in;
 
-import br.com.postech.soat.commons.application.mediator.Mediator;
-import br.com.postech.soat.commons.application.query.Query;
 import br.com.postech.soat.openapi.model.GetProduct200ResponseInnerDto;
 import br.com.postech.soat.openapi.model.ProductCategoryDto;
-import br.com.postech.soat.product.core.application.services.command.model.GetProductCommand;
-import br.com.postech.soat.product.core.application.services.query.model.ProductQuery;
-import br.com.postech.soat.product.core.domain.Category;
-import br.com.postech.soat.product.core.domain.model.Product;
+import br.com.postech.soat.product.infrastructure.http.ProductController;
+import br.com.postech.soat.product.infrastructure.http.ProductWebMapper;
+import br.com.postech.soat.product.infrastructure.LoggerAdapter;
+import br.com.postech.soat.product.application.repositories.ProductRepository;
+import br.com.postech.soat.product.application.usecases.FindProductUseCase;
+import br.com.postech.soat.product.application.dto.FindProductQuery;
+import br.com.postech.soat.product.domain.enumtypes.Category;
+import br.com.postech.soat.product.domain.entity.Product;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -29,15 +31,25 @@ import static org.mockito.Mockito.when;
 class ProductControllerTest {
 
     @Mock
-    private Mediator mediator;
+    private ProductWebMapper productWebMapper;
+    @Mock
+    private FindProductUseCase findProductUseCase;
+    @Mock
+    private ProductRepository productRepository;
+    @Mock
+    private LoggerAdapter loggerAdapter;
 
     private ProductController productController;
+
     private Product product;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        productController = new ProductController(mediator);
+
+        productController = new ProductController(productRepository, productWebMapper);
+
+        this.findProductUseCase = new FindProductUseCase(productRepository, loggerAdapter);
 
         UUID productIdValue = UUID.randomUUID();
 
@@ -52,9 +64,20 @@ class ProductControllerTest {
             .active(true)
             .build();
 
-        lenient().when(mediator.send(any(Query.class))).thenReturn(Collections.singletonList(product));
-        lenient().when(mediator.send(any(ProductQuery.class))).thenReturn(Collections.singletonList(product));
-        lenient().when(mediator.send(any(GetProductCommand.class))).thenReturn(Collections.singletonList(product));
+        GetProduct200ResponseInnerDto responseDto = new GetProduct200ResponseInnerDto()
+            .id(product.getId().getValue())
+            .name(product.getName().value())
+            .sku(product.getSku().value())
+            .description(product.getDescription().value())
+            .price(product.getPrice().value().doubleValue())
+            .active(product.getActive())
+            .image(product.getImage().value())
+            .category(ProductCategoryDto.fromValue(product.getCategory().value()));
+
+        lenient().when(productRepository.findAll(any(FindProductQuery.class))).thenReturn(List.of(product));
+        lenient().when(productWebMapper.toListResponse(List.of(product))).thenReturn(List.of(responseDto));
+        lenient().when(findProductUseCase.execute(any(FindProductQuery.class)))
+            .thenReturn(List.of(product));
     }
 
     @Test
@@ -70,13 +93,13 @@ class ProductControllerTest {
 
         GetProduct200ResponseInnerDto responseDto = response.getBody().get(0);
         assertEquals(product.getId().getValue(), responseDto.getId());
-        assertEquals(product.getName(), responseDto.getName());
-        assertEquals(product.getSku(), responseDto.getSku());
-        assertEquals(product.getDescription(), responseDto.getDescription());
-        assertEquals(product.getPrice().doubleValue(), responseDto.getPrice());
+        assertEquals(product.getName().value(), responseDto.getName());
+        assertEquals(product.getSku().value(), responseDto.getSku());
+        assertEquals(product.getDescription().value(), responseDto.getDescription());
+        assertEquals(product.getPrice().value(), BigDecimal.valueOf(responseDto.getPrice()));
         assertEquals(product.getActive(), responseDto.getActive());
-        assertEquals(product.getImage(), responseDto.getImage());
-        assertEquals(ProductCategoryDto.fromValue(product.getCategory().name()), responseDto.getCategory());
+        assertEquals(product.getImage().value(), responseDto.getImage());
+        assertEquals(ProductCategoryDto.fromValue(product.getCategory().value()), responseDto.getCategory());
     }
 
     @Test
@@ -91,13 +114,13 @@ class ProductControllerTest {
 
         GetProduct200ResponseInnerDto responseDto = response.getBody().get(0);
         assertEquals(product.getId().getValue(), responseDto.getId());
-        assertEquals(product.getName(), responseDto.getName());
-        assertEquals(product.getSku(), responseDto.getSku());
-        assertEquals(product.getDescription(), responseDto.getDescription());
-        assertEquals(product.getPrice().doubleValue(), responseDto.getPrice());
+        assertEquals(product.getName().value(), responseDto.getName());
+        assertEquals(product.getSku().value(), responseDto.getSku());
+        assertEquals(product.getDescription().value(), responseDto.getDescription());
+        assertEquals(product.getPrice().value(), BigDecimal.valueOf(responseDto.getPrice()));
         assertEquals(product.getActive(), responseDto.getActive());
-        assertEquals(product.getImage(), responseDto.getImage());
-        assertEquals(ProductCategoryDto.fromValue(product.getCategory().name()), responseDto.getCategory());
+        assertEquals(product.getImage().value(), responseDto.getImage());
+        assertEquals(ProductCategoryDto.fromValue(product.getCategory().value()), responseDto.getCategory());
     }
 
     @Test
@@ -113,13 +136,13 @@ class ProductControllerTest {
 
         GetProduct200ResponseInnerDto responseDto = response.getBody().get(0);
         assertEquals(product.getId().getValue(), responseDto.getId());
-        assertEquals(product.getName(), responseDto.getName());
-        assertEquals(product.getSku(), responseDto.getSku());
-        assertEquals(product.getDescription(), responseDto.getDescription());
-        assertEquals(product.getPrice().doubleValue(), responseDto.getPrice());
+        assertEquals(product.getName().value(), responseDto.getName());
+        assertEquals(product.getSku().value(), responseDto.getSku());
+        assertEquals(product.getDescription().value(), responseDto.getDescription());
+        assertEquals(product.getPrice().value(), BigDecimal.valueOf(responseDto.getPrice()));
         assertEquals(product.getActive(), responseDto.getActive());
-        assertEquals(product.getImage(), responseDto.getImage());
-        assertEquals(ProductCategoryDto.fromValue(product.getCategory().name()), responseDto.getCategory());
+        assertEquals(product.getImage().value(), responseDto.getImage());
+        assertEquals(ProductCategoryDto.fromValue(product.getCategory().value()), responseDto.getCategory());
     }
 
     @Test
@@ -134,13 +157,13 @@ class ProductControllerTest {
 
         GetProduct200ResponseInnerDto responseDto = response.getBody().get(0);
         assertEquals(product.getId().getValue(), responseDto.getId());
-        assertEquals(product.getName(), responseDto.getName());
-        assertEquals(product.getSku(), responseDto.getSku());
-        assertEquals(product.getDescription(), responseDto.getDescription());
-        assertEquals(product.getPrice().doubleValue(), responseDto.getPrice());
+        assertEquals(product.getName().value(), responseDto.getName());
+        assertEquals(product.getSku().value(), responseDto.getSku());
+        assertEquals(product.getDescription().value(), responseDto.getDescription());
+        assertEquals(product.getPrice().value(), BigDecimal.valueOf(responseDto.getPrice()));
         assertEquals(product.getActive(), responseDto.getActive());
-        assertEquals(product.getImage(), responseDto.getImage());
-        assertEquals(ProductCategoryDto.fromValue(product.getCategory().name()), responseDto.getCategory());
+        assertEquals(product.getImage().value(), responseDto.getImage());
+        assertEquals(ProductCategoryDto.fromValue(product.getCategory().value()), responseDto.getCategory());
     }
 
     @Test
@@ -148,8 +171,11 @@ class ProductControllerTest {
         String sku = "NonExistentSKU";
         String category = "DRINK";
 
-        when(mediator.send(any(Query.class))).thenReturn(Collections.emptyList());
-        when(mediator.send(any(GetProductCommand.class))).thenReturn(Collections.emptyList());
+        when(productRepository.findAll(any(FindProductQuery.class))).thenReturn(Collections.emptyList());
+        when(findProductUseCase.execute(any(FindProductQuery.class)))
+            .thenReturn(Collections.emptyList());
+        when(productWebMapper.toListResponse(Collections.emptyList()))
+            .thenReturn(Collections.emptyList());
 
         ResponseEntity<List<GetProduct200ResponseInnerDto>> response = productController.getProduct(sku, category);
 
